<resources>
    <string name="app_name">Sgre Laboratory</string>
    <string name="sign_in_lab">SIGN IN</string>
    <string name="remember_me">Remember me</string>
    <string name="forget">Forget password?</string>
    <string name="logo_text">Republic algerien democratique populaire ministry of higher education and scientific research, smart grids and renewable energies.</string>
    <string name="text_category">Category</string>
    <string name="text_product">Product</string>
    <string name="forget_text">Put your E-mail and receive your Password / or contact: admin@sgreapp.com / +213669100257</string>
    <!-- validation Errors -->
    <string name="err_name">The name field is required.</string>
    <string name="err_email">The email must be a valid email address.</string>
    <string name="err_password">The password must be at least 6 characters.</string>
    <string name="forget_password">Forget Password</string>
    <string name="sent">Sent</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="text_cart">View Cart</string>
    <string name="project_information">Project information</string>
    <string name="confirm_project">confirm project</string>
    <string name="name_theme">Name theme</string>
    <string name="name_students">Name Students</string>
    <string name="name_teacher">Name teacher</string>
    <string name="notice_required"><b>Notice!</b> You must enter the required project information. If there is more than one student, put (,) as the difference between the student and the other </string>
    <string name="continueCart">Continue</string>
    <string name="err_theme">Error theme</string>
    <string name="err_teacher">Error teacher</string>
    <string name="err_student">Error student</string>
</resources>
