<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="45dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_form_cart">

        <RelativeLayout
            android:id="@+id/formHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/formTitleHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_information"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="18dp"
                android:padding="14dp"
                android:textAlignment="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/formTitleHeader"
                android:background="@color/colorAccent" />

        </RelativeLayout><!-- Form Header -->
        <RelativeLayout
            android:id="@+id/formBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/formHeader"
            android:layout_above="@id/formFooter">
            <RelativeLayout
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameTheme"
                    android:hint="@string/name_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorHintDark"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:drawableStart="@drawable/school_icon"
                        android:drawableLeft="@drawable/school_icon"
                        android:drawablePadding="8dp"
                        android:textColor="@color/colorTextDark"
                        android:backgroundTint="@color/colorHintDark"
                        android:imeOptions="actionNext"
                        android:paddingBottom="10dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/janna_lt_regular"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameTeacher"
                    android:layout_below="@id/nameTheme"
                    android:hint="@string/name_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorHintDark"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:drawableStart="@drawable/person_icon"
                        android:drawableLeft="@drawable/person_icon"
                        android:drawablePadding="8dp"
                        android:textColor="@color/colorTextDark"
                        android:backgroundTint="@color/colorHintDark"
                        android:imeOptions="actionNext"
                        android:paddingBottom="10dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/janna_lt_regular"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameStudent"
                    android:layout_below="@id/nameTeacher"
                    android:hint="@string/name_students"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorHintDark"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:drawableStart="@drawable/users_icon"
                        android:drawableLeft="@drawable/users_icon"
                        android:drawablePadding="8dp"
                        android:textColor="@color/colorTextDark"
                        android:backgroundTint="@color/colorHintDark"
                        android:imeOptions="actionNext"
                        android:paddingBottom="10dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/janna_lt_regular"/>

                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_below="@id/nameStudent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorHintDark"
                    android:textSize="18dp"
                    android:text="@string/notice_required"/>

            </RelativeLayout>
        </RelativeLayout><!-- Form Body -->
        <RelativeLayout
            android:id="@+id/formFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:padding="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/round_btn_cart"
                    android:text="@string/confirm_project"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorAccent"/>
                <Button
                    android:id="@+id/formClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/close_btn_cart"
                    android:text="Close"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

        </RelativeLayout><!-- Form Footer -->

    </RelativeLayout>

</RelativeLayout>