<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/cover_screen"
    tools:context=".HomeActivity"
    android:id="@+id/HomeLayout">
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        app:menu="@menu/menu_layout"
        app:itemIconTint="@color/colorAccent"
        app:headerLayout="@layout/menu_header"
        app:itemTextColor="@color/colorAccent"
        android:layout_gravity="start"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/logoHeader"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:src="@drawable/logo_circle_dark"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="left"
                android:text="@string/logo_text"
                android:textColor="@color/colorTextDark"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:layout_gravity="center"
                android:textSize="12dp"
                app:fontFamily="@font/janna_lt_regular" />

        </LinearLayout><!-- Logo Header -->
        <RelativeLayout
            android:id="@+id/Search"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/lo_screen_search">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:id="@+id/menuAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/menu_icon"/>
                </RelativeLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inEmail"
                    android:hint="@string/search"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColorHint="@color/colorHintDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:drawableEnd="@drawable/search_icon_1"
                        android:drawableRight="@drawable/search_icon_1"
                        android:textColor="@color/colorTextDark"
                        android:textSize="12dp"
                        android:backgroundTint="@color/colorHintDark"
                        android:imeOptions="actionNext"
                        android:paddingBottom="10dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/janna_lt_regular"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


        </RelativeLayout><!-- Search -->
        <RelativeLayout
            android:id="@+id/Category"
            android:layout_below="@+id/logoHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="10dp">
            <LinearLayout
                android:id="@+id/lineCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_category"
                    android:textSize="14dp"
                    android:textColor="@color/colorTextDark"
                    android:fontFamily="@font/janna_lt_regular"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorTextDark"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:visibility="visible"
                android:id="@+id/loadCategory"
                android:layout_below="@id/lineCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp"/><!-- Load Category -->
        </RelativeLayout><!-- Category -->
        <RelativeLayout
            android:id="@+id/Product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Category"
            android:paddingLeft="15dp"
            android:paddingRight="10dp">
            <LinearLayout
                android:id="@+id/lineProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_product"
                    android:textSize="14dp"
                    android:textColor="@color/colorTextDark"
                    android:fontFamily="@font/janna_lt_regular"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorTextDark"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:visibility="visible"
                android:id="@+id/loadProduct"
                android:layout_below="@id/lineProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="50dp" /><!-- Load Product -->
        </RelativeLayout><!-- Product -->
        <!-- Load Cart View -->
        <RelativeLayout
            android:id="@+id/CartView"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoHeader"
            android:paddingLeft="15dp"
            android:paddingRight="10dp">
            <LinearLayout
                android:id="@+id/lineCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cart"
                    android:textSize="14dp"
                    android:textColor="@color/colorTextDark"
                    android:fontFamily="@font/janna_lt_regular"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    android:background="@color/colorTextDark"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/continueCart"
                    android:layout_width="110dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/btn_cart"
                    android:text="@string/continueCart"
                    android:textColor="@color/colorPrimary"/>
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/deleteAllCart"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/delete_icon"
                    android:padding="2dp"
                    android:background="@drawable/btn_cart"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:visibility="visible"
                android:id="@+id/loadCart"
                android:layout_below="@id/lineCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="50dp" /><!-- Load Product -->
        </RelativeLayout><!-- Cart View -->
        <RelativeLayout
            android:background="@drawable/cover_screen"
            android:id="@+id/Footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_alignParentBottom="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorTextDark"/>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/HomeAction"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:padding="2dp"
                        android:tint="@color/colorSetAction"
                        android:src="@drawable/home_icon" />

                </RelativeLayout><!-- Home -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/SearchAction"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:padding="2dp"
                        android:src="@drawable/search_icon" />

                </RelativeLayout><!-- Search -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ShoppingAction"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:padding="2dp"
                        android:src="@drawable/shopping_icon" />
                    <TextView
                        android:id="@+id/countCartView"
                        android:visibility="gone"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:text="5"
                        android:textSize="12dp"
                        android:layout_alignRight="@+id/ShoppingAction"
                        android:textColor="#fff"
                        android:padding="2dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:background="@drawable/cart_quantity"/>
                </RelativeLayout><!-- Shopping -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/AccountAction"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:padding="2dp"
                        android:src="@drawable/account_icon"/>

                </RelativeLayout><!-- Account -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/LogoutAction"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:padding="2dp"
                        android:src="@drawable/logout_icon"/>

                </RelativeLayout><!-- Logout -->

            </LinearLayout>


        </RelativeLayout><!-- Footer -->
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>